--- a/front/src/app/Anita/estilo.css
+++ b/front/src/app/Anita/estilo.css
@@ -1,8 +1,20 @@
 .login-container {
+  color: black;
+  
   background-color: pink;
   padding: 20px;
   border-radius: 10px;
   width: 300px;
   margin: 0 auto;
   text-align: center;
+}
+
+.login-button {
+  font-family: 'Montserrat', sans-serif; /* Aplicar la fuente Montserrat */
+  color: black; /* Cambiar el color del texto a negro */
+  background-color: #ffcc00; /* Cambiar el color de fondo si es necesario */
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
